Add HostGator migration files and update website for marketmindplatform.com domain

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="MarketMind - Professional Trading Journal & Analysis">
     <meta property="og:description" content="Track your trades, analyze performance, and gain insights to improve your trading strategy.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://marketmind.app">
+    <meta property="og:url" content="https://marketmindplatform.com">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
@@ -175,7 +175,7 @@
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <ul>
-                        <li><a href="mailto:support@marketmind.app">support@marketmind.app</a></li>
+                        <li><a href="mailto:support@marketmindplatform.com">support@marketmindplatform.com</a></li>
                         <li><a href="https://rork.app">Rork AI</a></li>
                     </ul>
                 </div>
