Switch from SVG to PNG for App Store badge - Remove problematic SVG file - Update HTML to reference PNG instead - Create PNG generator HTML for easy badge creation - Better browser compatibility and consistent rendering

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The page you're looking for could not be found on MarketMind Platform.">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
