--- a/deployment-package/support.html
+++ b/deployment-package/support.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Get help and support for MarketMind trading journal app.">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
