Update website content for iOS-only availability - Change hero button to 'Download for iOS' - Update subtitle to 'Available on iOS - Android Coming Soon' - Change 'Cross-Platform Sync' to 'iCloud Sync' for iOS accuracy - Better reflect current app availability

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h1>Master Your Trading with MarketMind</h1>
                 <p class="hero-subtitle">The professional trading journal that helps you track trades, analyze performance, and improve your strategy with data-driven insights.</p>
                 <div class="hero-buttons">
-                    <a href="#download" class="btn btn-primary">Download Now</a>
+                    <a href="#download" class="btn btn-primary">Download for iOS</a>
                     <a href="#features" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
@@ -106,8 +106,8 @@
                 
                 <div class="feature-card">
                     <div class="feature-icon">📱</div>
-                    <h3>Cross-Platform Sync</h3>
-                    <p>Access your trading data anywhere with seamless cloud synchronization.</p>
+                    <h3>iCloud Sync</h3>
+                    <p>Access your trading data across all your iOS devices with seamless iCloud synchronization.</p>
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
     <section id="download" class="download">
         <div class="container">
             <h2>Get MarketMind Today</h2>
-            <p class="section-subtitle">Available on iOS and Android</p>
+            <p class="section-subtitle">Available on iOS - Android Coming Soon</p>
             
             <div class="download-buttons">
                 <a href="#" class="download-btn app-store">
