Replace broken hero image with animated brain placeholder
- Replaced corrupted hero-app.png with animated placeholder
- Created brain-themed placeholder with trading icons
- Added pulsing animation and gradient background
- Optimized responsive design for all screen sizes
- Fixed image display issues with proper fallback

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="assets/hero-app.png" alt="MarketMind App Interface" class="app-preview">
+                <div class="app-preview-placeholder">
+                    <div class="brain-icon">🧠</div>
+                    <div class="chart-icon">📈</div>
+                    <div class="trading-icon">💹</div>
+                    <h3>MarketMind</h3>
+                    <p>Professional Trading Analysis</p>
+                </div>
             </div>
         </div>
     </section>
