Update all image assets with proper files
- Updated hero-app.png with actual brain image (1.5MB, proper size)
- Updated screenshot images with real app screenshots
- Added favicon.ico for proper site icon
- Replaced placeholder with actual hero image
- Updated favicon references to use existing files
- All images now display correctly with optimized sizing

--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     <meta property="og:url" content="https://marketmindplatform.com">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico?v=2">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png?v=2">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png?v=2">
-    <link rel="manifest" href="assets/site.webmanifest?v=2">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico?v=3">
+    <link rel="manifest" href="assets/site.webmanifest?v=3">
     
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
@@ -62,13 +59,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="app-preview-placeholder">
-                    <div class="brain-icon">🧠</div>
-                    <div class="chart-icon">📈</div>
-                    <div class="trading-icon">💹</div>
-                    <h3>MarketMind</h3>
-                    <p>Professional Trading Analysis</p>
-                </div>
+                <img src="assets/hero-app.png" alt="MarketMind Brain with Financial Charts" class="app-preview">
             </div>
         </div>
     </section>
